# normalization-insensitive

./: .gitignore  CHANGELOG  LICENSE  README.markdown  appveyor.yml  normalization-insensitive.cabal  stack.yaml
Data/Unicode/: NormalizationInsensitive.hs
Data/Unicode/NormalizationInsensitive/: Internal.hs  Unsafe.hs
bench/: bench.hs
test/: test.hs
