name:          normalization-insensitive
version:       1.2.0.5
cabal-version: >=1.8
build-type:    Simple
license:       BSD3
license-file:  LICENSE
copyright:     2011 Bas van Dijk
author:        Bas van Dijk
maintainer:    Bas van Dijk <v.dijk.bas@gmail.com>
homepage:      https://github.com/basvandijk/normalization-insensitive
bug-reports:   https://github.com/basvandijk/normalization-insensitive/issues
category:      Data, Text
synopsis:      Normalization insensitive string comparison
description:   The module @Data.Unicode.NormalizationInsensitive@ provides the 'NI' type
               constructor which can be parameterised by a string-like
               type like: 'String', 'ByteString', 'Text',
               etc.. Comparisons of values of the resulting type will be
               insensitive to normalization.
tested-with:
  GHC==7.0.4,
  GHC==7.2.2
  GHC==7.4.2,
  GHC==7.6.3,
  GHC==7.8.4,
  GHC==7.10.3,
  GHC==8.0.1

extra-source-files: README.markdown CHANGELOG pg2189.txt

source-repository head
  Type:     git
  Location: git://github.com/basvandijk/normalization-insensitive.git

Library
  ghc-options: -Wall
  build-depends: base       >= 3   && < 4.10
               , bytestring >= 0.9 && < 0.11
               , text       >= 0.3 && < 1.3
               , deepseq    >= 1.1 && < 1.5
               , hashable   >= 1.0 && < 1.3
               , unicode-transforms
  exposed-modules: Data.Unicode.NormalizationInsensitive, Data.Unicode.NormalizationInsensitive.Unsafe
  other-modules: Data.Unicode.NormalizationInsensitive.Internal

test-suite test-normalization-insensitive
  type:           exitcode-stdio-1.0
  main-is:        test.hs
  hs-source-dirs: test

  build-depends: normalization-insensitive
               , base                 >= 3     && < 4.10
               , bytestring           >= 0.9   && < 0.11
               , text                 >= 0.3   && < 1.3
               , HUnit                >= 1.2.2 && < 1.4
               , test-framework       >= 0.2.4 && < 0.9
               , test-framework-hunit >= 0.2.4 && < 0.4

  ghc-options: -Wall

benchmark bench-normalization-insensitive
  type:           exitcode-stdio-1.0
  main-is:        bench.hs
  hs-source-dirs: bench

  ghc-options:    -Wall -O2

  build-depends: normalization-insensitive
               , base                 >= 3     && < 4.10
               , bytestring           >= 0.9   && < 0.11
               , criterion            >= 0.6.1 && < 1.2
               , deepseq              >= 1.1   && < 1.5
